@@ -1,3 +1,8 @@
+2003-12-25  Kentaro Sato <kentaro@ranvis.com>
+	* timidity/playmidi.c, timidity/readmidi.c,
+	  timidity/tables.[ch], timidity/timidity.c:
+	  Support for GM2 default MSB bank and volume curve.
+
 2003-12-24  Saito <saito2@digitalme.com>
 
 	* timidity/playmidi.[ch], timidity/readmidi.c:
